properly list maps for current game mode, pull in maps from data and home directories inclusive as extra maps
Former-commit-id: aa0108ee12b3469c06206ad214efbb9e657a7768

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -119,19 +119,28 @@ newgui name [
 ]
 
 wepnames = [ "  plasma" " shotgun" "chaingun" "  flamer" " carbine" "   rifle" "grenades"] //make them all the same size
+
+maplists = [ "" "" lobbymaps lobbymaps lobbymaps lobbymaps missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
 maplistsize = 20 //adjust if desired
-mapindex = 0 // maplist len - 19
+mapindex = 0
 maplist = ""
+mapextra = ""
 
 newgui game [
 	if (|| (|| (!= $lastmode $modeselected) (!= $lastmuts $mutsselected)) (!= $showngamegui 1)) [
 		if (&& (!= $lastmode $modeselected) (!= $showngamegui 0)) [ mutsselected = 0 ]
-		//ms = (* $modeselected 2)
-		//if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
-		//do [maplist = $@(at $maplists $ms)]
+		ms = (* $modeselected 2)
+		if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
+		do [maplist = $@(at $maplists $ms)]
 		l = -1
-		loop i (listlen $lobbymaps) [
-			ncurmap = (at $lobbymaps $i)
+		//loop i (listlen $lobbymaps) [
+		//	ncurmap = (at $lobbymaps $i)
+		//	if (< (listfind mcurmap $maplist [strcmp $mcurmap $ncurmap]) 0) [
+		//		if (< $l 0) [ maplist = (concat $maplist "?"); l = $i ]
+		//		maplist = (concat $maplist $ncurmap)
+		//	]
+		//]
+		loopfiles ncurmap maps bgz [
 			if (< (listfind mcurmap $maplist [strcmp $mcurmap $ncurmap]) 0) [
 				if (< $l 0) [ maplist = (concat $maplist "?"); l = $i ]
 				maplist = (concat $maplist $ncurmap)
@@ -143,12 +152,12 @@ newgui game [
 		] [
 			mapnum = (listfind curmap $maplist [|| (strcmp $curmap $maptxt) (strcmp (format "maps/%1" $curmap) $maptxt)])
 		]
-		if (< $mapnum 0) [ mapnum = $l; extramap = (mapname) ]
+		if (< $mapnum 0) [ mapnum = $l; mapextra = (mapname) ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
 		showngamegui = 1
 	]
-	if (strcmp (at $maplist $mapnum) "?") [ maptxt = $extramap ] [ maptxt = (at $maplist $mapnum) ]
+	if (strcmp (at $maplist $mapnum) "?") [ maptxt = $mapextra ] [ maptxt = (at $maplist $mapnum) ]
 	guistayopen [
 		guilist [
 			guilist [
@@ -191,10 +200,10 @@ newgui game [
 					]
 					guistrut 1
 					guilist [
-						varfld botscale 7
-						varfld botratio 7
-						varfld botminskill 7
-						varfld botmaxskill 7
+						varfld botscale 8
+						varfld botratio 8
+						varfld botminskill 8
+						varfld botmaxskill 8
 					]
 					guistrut 1
 					guilist [
@@ -205,32 +214,40 @@ newgui game [
 			]
 			guistrut 1
 			guilist [
-				i = 0;
 				guititle "maps"
-				loopfiles var data/maps bgz [
-					if (! $i) [maplist = ""; i = 1]
-					maplist = (concat $maplist $var)
-				]
 				
 				guilist [
 					nummaps = (listlen $maplist)
-					if (< $maplistsize $nummaps) [ guislider mapindex 0 (- $nummaps $maplistsize) [] 1 ]
 					mapindex = (min (max 0 (- $nummaps $maplistsize)) $mapindex) //safeguard
 					mapnum = (min $mapnum $nummaps)
-					
+					if (< $maplistsize $nummaps) [ guislider mapindex 0 (- $nummaps $maplistsize) [] 1 ]
 					guilist [
 						loop i $nummaps [
 							if (&& (>= $i $mapindex) (< (- $i $mapindex) $maplistsize)) [
-								guiradio (at $maplist $i) mapnum $i
+								curmap = (at $maplist $i)
+								if (strcmp $curmap "?") [
+									guilist [
+										guiradio "" mapnum $i
+										mapextraval = $mapextra
+										guifield mapextraval 20 [mapextra = $mapextraval]
+									]
+								] [
+									guilist [
+										guiradio $curmap mapnum $i
+										len = (- 21 (strlen $curmap))
+										if (> $len 0) [ guistrut $len ]
+									]
+								]
 							]
 						]
 					]
 				]
 				guistrut 1 
 				guilist [ 
+					guistrut 2
 					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action" 
-					guistrut 1 
-					guibutton (format "%1cancel" $red) [cleargui 1] "exit" 
+					guistrut 2
+					guibutton (format "%1close" $red) [cleargui 1] "exit" 
 				] 
 			]
 		]
@@ -264,37 +281,37 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
-					varfld teamdamage 7
-					varfld maxhealth 7
-					varfld overctfhealth 7
-					varfld overstfhealth 7
-					varfld maxcarry 7
-					varfld regenhealth 7
-					varfld regenctfguard 7
-					varfld regenstfguard 7
-					varfld regenctfflag 7
-					varfld regenstfflag 7
-					varfld itemsallowed 7
-					varfld itemdropping 7
-					varfld kamikaze 7
-					varfld fraglimit 7
-					varfld ctflimit 7
-					varfld stflimit 7
-					varfld stffinish 7
+					varfld teamdamage 8
+					varfld maxhealth 8
+					varfld overctfhealth 8
+					varfld overstfhealth 8
+					varfld maxcarry 8
+					varfld regenhealth 8
+					varfld regenctfguard 8
+					varfld regenstfguard 8
+					varfld regenctfflag 8
+					varfld regenstfflag 8
+					varfld itemsallowed 8
+					varfld itemdropping 8
+					varfld kamikaze 8
+					varfld fraglimit 8
+					varfld ctflimit 8
+					varfld stflimit 8
+					varfld stffinish 8
 					guilist [
-						guilist [ varfld spawnweapon 2 ]
+						guilist [ varfld spawnweapon 3 ]
 						guitext (format "%1%2" $gray (at $wepnames $spawnweapon))
 					]
 					guilist [
-						guilist [ varfld instaspawnweapon 2 ]
+						guilist [ varfld instaspawnweapon 3 ]
 						guitext (format "%1%2" $gray (at $wepnames $instaspawnweapon))
 					]
-					varfld maprotate 7
-					varfld spawnrotate 7
+					varfld maprotate 8
+					varfld spawnrotate 8
 				]
 			]
 		]
-		guistrut 1
+		guistrut 2
 		guilist [
 			guilist [
 				guilist [
@@ -321,26 +338,26 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
-					varfld damagescale 7
-					varfld gravityscale 7
-					varfld jumpscale 7
-					varfld speedscale 7
-					varfld hitpushscale 7
-					varfld deadpushscale 7
-					varfld wavepushscale 7
-					varfld scoringstyle 7
-					varfld timelimit 7
-					varfld intermlimit 7
-					varfld votelimit 7
-					varfld itemspawntime 7
-					varfld regendelay 7
-					varfld regentime 7
-					varfld spawnprotecttime 7
-					varfld spawndelay 7
-					varfld ctfspawndelay 7
-					varfld stfspawndelay 7
-					varfld instaspawnscale 7
-					varfld paintspawnscale 7
+					varfld damagescale 8
+					varfld gravityscale 8
+					varfld jumpscale 8
+					varfld speedscale 8
+					varfld hitpushscale 8
+					varfld deadpushscale 8
+					varfld wavepushscale 8
+					varfld scoringstyle 8
+					varfld timelimit 8
+					varfld intermlimit 8
+					varfld votelimit 8
+					varfld itemspawntime 8
+					varfld regendelay 8
+					varfld regentime 8
+					varfld spawnprotecttime 8
+					varfld spawndelay 8
+					varfld ctfspawndelay 8
+					varfld stfspawndelay 8
+					varfld instaspawnscale 8
+					varfld paintspawnscale 8
 				]
 			]
 			guibutton (format "%1reset all game variables" $orange) [resetvars] "exit"
@@ -351,6 +368,8 @@ newgui game [
 	mutsselected = (mutscheck $modeselected (mutators))
 	lastmode = -1
 	lastmuts = -1
+	mapnum = 0
+	mapextra = ""
 	showngamegui = 0
 ]
 
