hud reduction, fixed grenade item model, reduced grenade maxammo and removed starting ammo
Former-commit-id: dc94d93728c0e99ab0bfb5d7740d7330122080ae

--- a/data/models/weapons/grenades/item/md5.cfg
+++ b/data/models/weapons/grenades/item/md5.cfg
@@ -1,4 +1,4 @@
-md5load fragitem.md5mesh
+md5load ../frag.md5mesh
 md5skin mesh <dds>../skin.jpg <dds>../mask.jpg
 md5bumpmap mesh <dds>../normal.jpg
 
