revert/fix some mouse/camera retardation
Former-commit-id: b57c8c87e23e22ac5013553ed2c35cdec1e4a77e

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -980,26 +980,19 @@ newgui options [
     guislider soundbufferlen
     guicheckbox "Mumble positional audio" mumble
 
-
     guitab  "mouse"
 	guilist [
 		guilist [
-			guicheckbox "invert mouse"      invmouse
+			guicheckbox "invert mouse"      mouseinvert
 			guitext "mouse overall sensitivity	"
 			guitext "mouse yaw sensitivity"
 			guitext "mouse pitch sensitivity"
-			guitext "mouse zoom sensitivity"
-			guitext "mouse dead zone"
-			guitext "mouse pan speed"
 		]
 		guilist [
-			guicheckbox "absolute mouse						"    absmouse
+			guicheckbox "absolute mouse"    mouseabsolute
 			guislider sensitivity 1 100
 			guislider yawsensitivity 0 100
 			guislider pitchsensitivity 1 100
-			guislider zoomsensitivity 1 100
-			guislider mousedeadzone 1 100
-			guislider mousepanspeed 1 1000
 		]
 	]
 	guibar
@@ -1007,32 +1000,23 @@ newgui options [
 	guilist [
 		guilist [
 			guitext "fixed"
-			guiradio "editmode" editmouse 0
-			guiradio "first person" firstpersonmouse 0
-			guiradio "third person" thirdpersonmouse 0
-			guiradio "spectator" specmouse 0
-			guiradio "snipe" snipemouse 0
-			guiradio "prone" pronemouse 0
+			guiradio "default" mousetype 0
+			guiradio "snipe" snipemousetype 0
+			guiradio "prone" pronemousetype 0
 		]
 		guibar
 		guilist [
 			guitext "panned"
-			guiradio "editmode" editmouse 1
-			guiradio "first person" firstpersonmouse 1
-			guiradio "third person" thirdpersonmouse 1
-			guiradio "spectator" specmouse 1
-			guiradio "snipe" snipemouse 1
-			guiradio "prone" pronemouse 1
+			guiradio "default" mousetype 1
+			guiradio "snipe" snipemousetype 1
+			guiradio "prone" pronemousetype 1
 		]
 		guibar
 		guilist [
 			guitext "free"
-			guiradio "editmode" editmouse 2
-			guiradio "first person" firstpersonmouse 2
-			guiradio "third person" thirdpersonmouse 2
-			guiradio "spectator" specmouse 2
-			guiradio "snipe" snipemouse 2
-			guiradio "prone" pronemouse 2
+			guiradio "default" mousetype 2
+			guiradio "snipe" snipemousetype 2
+			guiradio "prone" pronemousetype 2
 		]
 	]
 
