octa support update; updated to mapversion v29, import waypoints, fix teleport/teledest importing, add option to list maps in game menu if pakdirs are loaded
Former-commit-id: 2f6d02d790768f84fcc6ebbd8fa9f6136f7d8b6b

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -125,32 +125,38 @@ maplistsize = 20 //adjust if desired
 mapindex = 0
 maplist = ""
 mapextra = ""
+mapocta = 0
 
 newgui game [
 	if (|| (|| (!= $lastmode $modeselected) (!= $lastmuts $mutsselected)) (!= $showngamegui 1)) [
 		if (&& (!= $lastmode $modeselected) (!= $showngamegui 0)) [ mutsselected = 0 ]
 		ms = (* $modeselected 2)
 		if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
-		do [maplist = $@(at $maplists $ms)]
+		maplist = ""
+		do [list = $@(at $maplists $ms)]
+		loop i (listlen $list) [
+			maplist = (concat $maplist (concatword "maps/" (at $list $i)))
+		]
 		l = -1
-		//loop i (listlen $lobbymaps) [
-		//	ncurmap = (at $lobbymaps $i)
-		//	if (< (listfind mcurmap $maplist [strcmp $mcurmap $ncurmap]) 0) [
-		//		if (< $l 0) [ maplist = (concat $maplist "?"); l = $i ]
-		//		maplist = (concat $maplist $ncurmap)
-		//	]
-		//]
 		loopfiles ncurmap maps bgz [
-			if (< (listfind mcurmap $maplist [strcmp $mcurmap $ncurmap]) 0) [
-				if (< $l 0) [ maplist = (concat $maplist "?"); l = $i ]
-				maplist = (concat $maplist $ncurmap)
+			lcurmap = (concatword "maps/" $ncurmap)
+			if (< (listfind mcurmap $maplist [strcmp $mcurmap $lcurmap]) 0) [
+				if (< $l 0) [ maplist = (concat $maplist "?"); l = (- (listlen $maplist) 1) ]
+				maplist = (concat $maplist $lcurmap)
 			]
 		]
-		if (< $l 0) [ maplist = (concat $maplist "?"); l = $n ]
+		if (&& (> $hasoctapaks 0) (> $mapocta 0)) [
+			loopfiles ncurmap base ogz [
+				lcurmap = (concatword "base/" $ncurmap)
+				if (< $l 0) [ maplist = (concat $maplist "?"); l = (- (listlen $maplist) 1) ]
+				maplist = (concat $maplist $lcurmap)
+			]
+		]
+		if (< $l 0) [ maplist = (concat $maplist "?"); l = (- (listlen $maplist) 1) ]
 		if (!= $showngamegui 1) [
-			mapnum = (listfind curmap $maplist [|| (strcmp $curmap (mapname)) (strcmp (format "maps/%1" $curmap) (mapname))])
+			mapnum = (listfind curmap $maplist [(strcmp $curmap (mapname))])
 		] [
-			mapnum = (listfind curmap $maplist [|| (strcmp $curmap $maptxt) (strcmp (format "maps/%1" $curmap) $maptxt)])
+			mapnum = (listfind curmap $maplist [(strcmp $curmap $maptxt)])
 		]
 		if (< $mapnum 0) [ mapnum = $l; mapextra = (mapname) ]
 		lastmode = $modeselected
@@ -184,12 +190,12 @@ newgui game [
 					guistrut 1
 					guilist [
 						guistrut 1
-						guiimage (format "maps/%1" $maptxt) [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 6 1 "textures/nothumb"
+						guiimage $maptxt [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 6 1 "textures/nothumb"
 					]
 				]
 				guistrut 1
 				guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
-				guitext (format " %1selected on map %2%3" $gray $yellow $maptxt) "blank"
+				guitext (format "%1selected on map %2%3" $gray $yellow $maptxt) "blank"
 				guistrut 1
 				guilist [
 					guilist [
@@ -229,12 +235,12 @@ newgui game [
 									guilist [
 										guiradio "" mapnum $i
 										mapextraval = $mapextra
-										guifield mapextraval 20 [mapextra = $mapextraval]
+										guifield mapextraval 24 [mapextra = $mapextraval]
 									]
 								] [
 									guilist [
 										guiradio $curmap mapnum $i
-										len = (- 21 (strlen $curmap))
+										len = (- 24 (strlen $curmap))
 										if (> $len 0) [ guistrut $len ]
 									]
 								]
@@ -242,11 +248,17 @@ newgui game [
 						]
 					]
 				]
-				guistrut 1 
+				guistrut 1
 				guilist [ 
-					guistrut 2
+					if (> $hasoctapaks 0) [
+						guibutton (format "%1octa maps" $violet) [
+							if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
+							showngamegui = 0
+						] (? (> $mapocta 0) "checkboxon" "checkbox")
+						guistrut 1
+					]
 					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action" 
-					guistrut 2
+					guistrut 1
 					guibutton (format "%1close" $red) [cleargui 1] "exit" 
 				] 
 			]
