--- a/data/octa.cfg
+++ b/data/octa.cfg
@@ -1,10 +1,12 @@
 // Blood Frontier: OCTA Map Import Settings
 
+playasong = [ music (concatword "fanatic/" (+ 1 (rnd 8)) ".ogg") playasong ]
+
 crawlspeed 50
 gravity 100
-jumpspeed 70
-impulespeed 50
-movespeed 70
+jumpspeed 75
+impulsespeed 45
+movespeed 75
 liquidscale 0.6
 liquidfric 20
 sinkfric 3
