cleaned up maplists and game menu some more, added venus to rotation
Former-commit-id: 66a01948d5e2ac7880cb91745026d8b8b377874a

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -120,50 +120,56 @@ newgui name [
 
 wepnames = [ "  plasma" " shotgun" "chaingun" "  flamer" " carbine" "   rifle" "grenades"] //make them all the same size
 
-maplists = [ "" "" lobbymaps lobbymaps lobbymaps lobbymaps missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
+maplists = [ missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
 maplistsize = 20 //adjust if desired
 mapindex = 0
 maplist = ""
+mapfile = ""
 mapextra = ""
 mapocta = 0
 
 newgui game [
 	if (|| (|| (!= $lastmode $modeselected) (!= $lastmuts $mutsselected)) (!= $showngamegui 1)) [
 		if (&& (!= $lastmode $modeselected) (!= $showngamegui 0)) [ mutsselected = 0 ]
-		ms = (* $modeselected 2)
-		if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
 		maplist = ""
-		do [list = $@(at $maplists $ms)]
-		loop i (listlen $list) [
-			maplist = (concat $maplist (concatword "maps/" (at $list $i)))
+		mapfile = ""
+		if (> $modeselected 2) [
+			ms = (* (- $modeselected 3) 2)
+			if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
+			do [list = $@(at $maplists $ms)]
+			loop i (listlen $list) [
+				lcurmap = (at $list $i)
+				maplist = (concat $maplist $lcurmap)
+				mapfile = (concat $mapfile (concatword "maps/" $lcurmap))
+			]
 		]
 		l = -1
-		loopfiles ncurmap maps bgz [
-			lcurmap = (concatword "maps/" $ncurmap)
+		loopfiles lcurmap maps bgz [
 			if (< (listfind mcurmap $maplist [strcmp $mcurmap $lcurmap]) 0) [
-				if (< $l 0) [ maplist = (concat $maplist "?"); l = (- (listlen $maplist) 1) ]
+				if (< $l 0) [ maplist = (concat $maplist "?"); mapfile = (concat $mapfile "?"); l = (- (listlen $maplist) 1) ]
 				maplist = (concat $maplist $lcurmap)
+				mapfile = (concat $mapfile (concatword "maps/" $lcurmap))
 			]
 		]
 		if (&& (> $hasoctapaks 0) (> $mapocta 0)) [
-			loopfiles ncurmap base ogz [
-				lcurmap = (concatword "base/" $ncurmap)
-				if (< $l 0) [ maplist = (concat $maplist "?"); l = (- (listlen $maplist) 1) ]
+			loopfiles lcurmap base ogz [
+				if (< $l 0) [ maplist = (concat $maplist "?"); mapfile = (concat $mapfile "?"); l = (- (listlen $maplist) 1) ]
 				maplist = (concat $maplist $lcurmap)
+				mapfile = (concat $mapfile (concatword "base/" $lcurmap))
 			]
 		]
-		if (< $l 0) [ maplist = (concat $maplist "?"); l = (- (listlen $maplist) 1) ]
+		if (< $l 0) [ maplist = (concat $maplist "?"); mapfile = (concat $mapfile "?"); l = (- (listlen $maplist) 1) ]
 		if (!= $showngamegui 1) [
-			mapnum = (listfind curmap $maplist [(strcmp $curmap (mapname))])
+			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap (mapname)) (strcmp (concatword "maps/" $curmap) (mapname))) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) (mapname))))])
 		] [
-			mapnum = (listfind curmap $maplist [(strcmp $curmap $maptxt)])
+			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap $mapcur) (strcmp (concatword "maps/" $curmap) $mapcur)) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) $mapcur)))])
 		]
 		if (< $mapnum 0) [ mapnum = $l; mapextra = (mapname) ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
 		showngamegui = 1
 	]
-	if (strcmp (at $maplist $mapnum) "?") [ maptxt = $mapextra ] [ maptxt = (at $maplist $mapnum) ]
+	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mapfile $mapnum) ]
 	guistayopen [
 		guilist [
 			guilist [
@@ -190,12 +196,12 @@ newgui game [
 					guistrut 1
 					guilist [
 						guistrut 1
-						guiimage $maptxt [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 6 1 "textures/nothumb"
+						guiimage $mapimg [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur) ] 6 1 "textures/nothumb"
 					]
 				]
 				guistrut 1
 				guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
-				guitext (format "%1selected on map %2%3" $gray $yellow $maptxt) "blank"
+				guitext (format "%1selected on map %2%3" $gray $yellow $mapcur) "blank"
 				guistrut 1
 				guilist [
 					guilist [
@@ -257,7 +263,7 @@ newgui game [
 						] (? (> $mapocta 0) "checkboxon" "checkbox")
 						guistrut 1
 					]
-					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action" 
+					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) "action" 
 					guistrut 1
 					guibutton (format "%1close" $red) [cleargui 1] "exit" 
 				] 
