--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -2765,6 +2765,7 @@ setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
 texture c "<mad:0.90/1.00/0.90>mitaman/mm-grassdead42.jpg" 1 0 0 0.750000 // 446
 texture n "mitaman/mm-grassdead42_normal.jpg"
 texture s "mitaman/mm-grassdead42_spec.jpg"
+autograss "luckystrike/grass_lucky_green.png"
 
 setshader bumpspecmapparallaxworld
 texture c "luckystrike/rock.png" 0 0 0 1.000000 // 447
