added 'Dead Simple' by W!CK3D
Former-commit-id: 3311c6879aa437692da8555d6bd627b1ad97f807

--- a/data/maps/dualstar.cfg
+++ b/data/maps/dualstar.cfg
@@ -50,7 +50,7 @@
 // liquidscale 0.9
 // lmshadows 1
 // mapmusic ""
-// maptitle "DualStar By Jonathan 'W!CK3D'"
+maptitle "DualStar by Jonathan 'W!CK3D'"
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
