s/octa maps/show sauerbraten maps/
Former-commit-id: e675251a6a198a4adba7fbb97b988a2e01da868b

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -254,17 +254,19 @@ newgui game [
 						]
 					]
 				]
-				guistrut 1
-				guilist [ 
-					if (> $hasoctapaks 0) [
-						guibutton (format "%1octa maps" $violet) [
+				if (> $hasoctapaks 0) [
+					guilist [
+						guistrut 2
+						guibutton (format "%1show sauerbraten maps" $violet) [
 							if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
 							showngamegui = 0
 						] (? (> $mapocta 0) "checkboxon" "checkbox")
-						guistrut 1
 					]
+				] [ guistrut 1 ]
+				guilist [ 
+					guistrut 2
 					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) "action" 
-					guistrut 1
+					guistrut 2
 					guibutton (format "%1close" $red) [cleargui 1] "exit" 
 				] 
 			]
