--- a/data/models/actors/player/md5.cfg
+++ b/data/models/actors/player/md5.cfg
@@ -13,7 +13,7 @@ md5anim "dead"                         "dead.md5anim"           8
 md5anim "idle"                         "idle.md5anim"           1
 md5anim "plasma"                       "idle.md5anim"           1
 md5anim "shotgun"                      "idle.md5anim"           1
-md5anim "chaingun"                     "idle.md5anim"           1
+md5anim "submachine"                   "idle.md5anim"           1
 md5anim "flamer"                       "idle.md5anim"           1
 md5anim "carbine"                      "idle.md5anim"           1
 md5anim "rifle"                        "idle.md5anim"           1
@@ -47,9 +47,9 @@ md5anim "plasma reload"                "g_reload.md5anim"       8
 md5anim "shotgun"                      "g_idle.md5anim"         1
 md5anim "shotgun shoot"                "g_shoot.md5anim"        25
 md5anim "shotgun reload"               "g_reload.md5anim"       8
-md5anim "chaingun"                     "g_idle.md5anim"         1
-md5anim "chaingun shoot"               "g_shoot.md5anim"        25
-md5anim "chaingun reload"              "g_reload.md5anim"       8
+md5anim "submachine"                   "g_idle.md5anim"         1
+md5anim "submachine shoot"             "g_shoot.md5anim"        25
+md5anim "submachine reload"            "g_reload.md5anim"       8
 md5anim "flamer"                       "g_idle.md5anim"         1
 md5anim "flamer shoot"                 "g_shoot.md5anim"        25
 md5anim "flamer reload"                "g_reload.md5anim"       8
