--- a/data/models/actors/player/vwep/md5.cfg
+++ b/data/models/actors/player/vwep/md5.cfg
@@ -16,9 +16,9 @@ md5anim "plasma reload"                "../vwep_p_reload.md5anim"       33
 md5anim "shotgun"                      "../vwep_sg_idle.md5anim"        1
 md5anim "shotgun shoot"                "../vwep_sg_shoot.md5anim"       15
 md5anim "shotgun reload"               "../vwep_sg_reload.md5anim"      16.8
-md5anim "chaingun"                     "../vwep_p_idle.md5anim"         1
-md5anim "chaingun shoot"               "../vwep_p_shoot.md5anim"        50
-md5anim "chaingun reload"              "../vwep_p_reload.md5anim"       20
+md5anim "submachine"                   "../vwep_p_idle.md5anim"         1
+md5anim "submachine shoot"             "../vwep_p_shoot.md5anim"        50
+md5anim "submachine reload"            "../vwep_p_reload.md5anim"       20
 md5anim "flamer"                       "../vwep_sg_idle.md5anim"        1
 md5anim "flamer shoot"                 "../vwep_sg_shoot.md5anim"       30
 md5anim "flamer reload"                "../vwep_fl_reload.md5anim"      15.5
