--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -19,7 +19,7 @@ registersound	"sfx/weaponreload"			128	"air"	256		//	S_RELOAD
 registersound	"sfx/weapontrigger"			128	"air"	256		//	S_SWITCH
 registersound	"sfx/plasma"				128	"air"	256		//	S_PLASMA
 registersound	"sfx/shotgun"				224	"air"	256		//	S_SG
-registersound	"sfx/chaingun"				128	"air"	256		//	S_CG
+registersound	"sfx/submachine"			128	"air"	256		//	S_SMG
 registersound	"sfx/grenadefire"			128	"air"	128		//	S_GLFIRE
 registersound	"sfx/flamer"				224	"air"	224		//	S_FLFIRE
 registersound	"sfx/carbine"				128	"air"	256		//	S_CARBINE
