fixing various issues
Former-commit-id: 4b846d3324b4b8d1677184bcf6d23163cd0e42cc

--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -2755,10 +2755,10 @@ texture s "luckystrike/compteur_s.jpg"
 texture z "luckystrike/compteur_z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/marsrock2.png" 1 0 0 1.000000 // 445
-texture n "acord/marsrock2n.png"
-texture s "acord/marsrock2s.png"
-texture z "acord/marsrock2z.png"
+texture c "acord/marsrock.png" 1 0 0 1.000000 // 445
+texture n "acord/null.jpg"
+texture s "acord/nospec.jpg"
+texture z "acord/marsrockz.png"
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
