about a dozen new textures
Former-commit-id: 7698aa44bb15e7f401c4b4d93691e06938c3f541

--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1155,6 +1155,122 @@ texture n "acord/substruct3n.png" 0 128 128 0.5
 texture s "acord/substruct3s.png" 0 128 128 0.5
 texture z "acord/substruct3z.png" 0 128 128 0.5
 
+texture 0 "acord/conc6.jpg" 0 0 0 0.5
+texture n "acord/conc6n.jpg" 0 0 0 0.5
+texture s "acord/conc6s.jpg" 0 0 0 0.5
+texture z "acord/conc6z.jpg" 0 0 0 0.5
+
+texture 0 "acord/conc6.jpg"  1 0 0 0.5
+texture n "acord/conc6n.jpg" 1 0 0 0.5
+texture s "acord/conc6s.jpg" 1 0 0 0.5
+texture z "acord/conc6z.jpg" 1 0 0 0.5
+
+texture 0 "acord/conc8.jpg" 0 0 0 0.5
+texture n "acord/conc8n.jpg" 0 0 0 0.5
+texture s "acord/conc8s.jpg" 0 0 0 0.5
+texture z "acord/conc8z.jpg" 0 0 0 0.5
+
+texture 0 "acord/conc8.jpg"  1 0 0 0.5
+texture n "acord/conc8n.jpg" 1 0 0 0.5
+texture s "acord/conc8s.jpg" 1 0 0 0.5
+texture z "acord/conc8z.jpg" 1 0 0 0.5
+
+texture 0 "acord/brick3.jpg"  0 0 0 0.5
+texture n "acord/brick3n.jpg" 0 0 0 0.5
+texture s "acord/lowspec.jpg" 0 0 0 0.5
+texture z "acord/brick3z.jpg" 0 0 0 0.5
+
+texture 0 "acord/brick3.jpg"  1 0 0 0.5
+texture n "acord/brick3n.jpg" 1 0 0 0.5
+texture s "acord/lowspec.jpg" 1 0 0 0.5
+texture z "acord/brick3z.jpg" 1 0 0 0.5
+
+texture 0 "acord/brick4.jpg"  0 0 0 0.5
+texture n "acord/brick4n.jpg" 0 0 0 0.5
+texture s "acord/lowspec.jpg" 0 0 0 0.5
+texture z "acord/brick4z.jpg" 0 0 0 0.5
+
+texture 0 "acord/brick4.jpg"  1 0 0 0.5
+texture n "acord/brick4n.jpg" 1 0 0 0.5
+texture s "acord/lowspec.jpg" 1 0 0 0.5
+texture z "acord/brick4z.jpg" 1 0 0 0.5
+
+texture 0 "acord/brick6.jpg"  0 0 0 0.5
+texture n "acord/brick6n.jpg" 0 0 0 0.5
+texture s "acord/brick6s.jpg" 0 0 0 0.5
+texture z "acord/brick6z.jpg" 0 0 0 0.5
+
+texture 0 "acord/brick6.jpg"  1 0 0 0.5
+texture n "acord/brick6n.jpg" 1 0 0 0.5
+texture s "acord/brick6s.jpg" 1 0 0 0.5
+texture z "acord/brick6z.jpg" 1 0 0 0.5
+
+texture 0 "acord/a_brick3.jpg"  0 0 0 0.5
+texture n "acord/a_brick3n.jpg" 0 0 0 0.5
+texture s "acord/lowspec.jpg" 0 0 0 0.5
+texture z "acord/a_brick3z.jpg" 0 0 0 0.5
+
+texture 0 "acord/a_brick3.jpg"  1 0 0 0.5
+texture n "acord/a_brick3n.jpg" 1 0 0 0.5
+texture s "acord/lowspec.jpg" 1 0 0 0.5
+texture z "acord/a_brick3z.jpg" 1 0 0 0.5
+
+texture 0 "acord/earth2.jpg" 0 0 0 0.5
+texture n "acord/earth2n.jpg" 0 0 0 0.5
+texture s "acord/earth2s.jpg" 0 0 0 0.5
+texture z "acord/earth2z.jpg" 0 0 0 0.5
+
+texture 0 "acord/earth2.jpg" 1 0 0 0.5
+texture n "acord/earth2n.jpg" 1 0 0 0.5
+texture s "acord/earth2s.jpg" 1 0 0 0.5
+texture z "acord/earth2z.jpg" 1 0 0 0.5
+
+texture 0 "acord/earth3.jpg" 0 0 0 0.5
+texture n "acord/earth3n.jpg" 0 0 0 0.5
+texture s "acord/earth3s.jpg" 0 0 0 0.5
+texture z "acord/earth3z.jpg" 0 0 0 0.5
+
+texture 0 "acord/earth3.jpg" 1 0 0 0.5
+texture n "acord/earth3n.jpg" 1 0 0 0.5
+texture s "acord/earth3s.jpg" 1 0 0 0.5
+texture z "acord/earth3z.jpg" 1 0 0 0.5
+
+texture 0 "acord/grass1.jpg" 0 0 0 0.5
+texture n "acord/grass1n.jpg" 0 0 0 0.5
+texture s "acord/grass1s.jpg" 0 0 0 0.5
+texture z "acord/grass1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/grass1.jpg"  1 0 0 0.5
+texture n "acord/grass1n.jpg" 1 0 0 0.5
+texture s "acord/grass1s.jpg" 1 0 0 0.5
+texture z "acord/grass1z.jpg" 1 0 0 0.5
+
+texture 0 "acord/techt1.jpg" 0 0 0 0.5
+texture n "acord/techt1n.jpg" 0 0 0 0.5
+texture s "acord/techt1s.jpg" 0 0 0 0.5
+texture z "acord/techt1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/techt1.jpg"  1 0 0 0.5
+texture n "acord/techt1n.jpg" 1 0 0 0.5
+texture s "acord/techt1s.jpg" 1 0 0 0.5
+texture z "acord/techt1z.jpg" 1 0 0 0.5
+
+texture 0 "acord/wall_conc1.jpg" 0 0 0 0.5
+texture n "acord/wall_conc1n.jpg" 0 0 0 0.5
+texture s "acord/wall_conc1s.jpg" 0 0 0 0.5
+texture z "acord/wall_conc1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/wall_conc1.jpg"  1 0 0 0.5
+texture n "acord/wall_conc1n.jpg" 1 0 0 0.5
+texture s "acord/wall_conc1s.jpg" 1 0 0 0.5
+texture z "acord/wall_conc1z.jpg" 1 0 0 0.5
+
+
+
+
+
+
+
 setshader stdworld
 
 texture 0 "acord/brick1.jpg"
