--- a/data/maps/deadsimple.cfg
+++ b/data/maps/deadsimple.cfg
@@ -31,6 +31,12 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// grassstep 2.0
+// grasstaper 0.2
 // gravity 40.0
 // impulsegravity 62.5
 // impulsespeed 100.0
