--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -10,7 +10,8 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudblend 0.8
+// cloudalpha 1.0
+// cloudblend 1.0
 // cloudbox "<mad:0.2/0.2/0.4>acord/sky3"
 // cloudclip 0.5
 // cloudcolour 0xFFFFFF
@@ -30,6 +31,12 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// grassstep 2.0
+// grasstaper 0.2
 // gravity 40.0
 // impulsegravity 62.5
 // impulsespeed 50.0
@@ -76,7 +83,7 @@
 // waterfog 150
 // waterlod 1
 // waterspec 150
-// watersubdiv 3
+// watersubdiv 0
 // yawcloudlayer 0
 // yawclouds 0
 // yawsky 0
