--- a/data/maps/panic.cfg
+++ b/data/maps/panic.cfg
@@ -10,16 +10,17 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
+// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox ""
 // cloudclip 0.5
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
-// cloudheight 0.2
-// cloudlayer ""
+// cloudheight 0.01
+// cloudlayer "acord/cloudlayer"
 // cloudscale 1.0
-// cloudscrollx 0.0
-// cloudscrolly 0.0
+// cloudscrollx 0.01
+// cloudscrolly -0.01
 // cloudsubdiv 16
 // crawlspeed 30.0
 // edgetolerance 4
@@ -30,6 +31,12 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// grassstep 2.0
+// grasstaper 0.2
 // gravity 40.0
 // impulsegravity 62.5
 // impulsespeed 50.0
@@ -64,17 +71,17 @@
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
-// spincloudlayer 0.0
-// spinclouds 0.0
-// spinsky 0.0
+// spincloudlayer 0.1
+// spinclouds 0.1
+// spinsky 0.1
 // stairheight 4.1
 // stepspeed 1.0
-// vertwater 1
+// vertwater 0
 // wallz 0.2
 // watercolour 0x103060
 // waterfallcolour 0x000000
 // waterfog 150
-// waterlod 1
+// waterlod 0
 // waterspec 150
 // watersubdiv 3
 // yawcloudlayer 0
@@ -116,7 +123,7 @@ texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg"" 0 0 0 0.500000 // 5
+texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 1.000000 // 5
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
@@ -1522,4 +1529,6 @@ mapsound "ambience/hollowwind" 25 "air" -1 -1
 mapsound "ambience/machine1" 75 "air" -1 -1
 mapsound "ambience/water" 100 "air" -1 -1
 mapsound "ambience/waterfall" 75 "air" -1 -1
+mapsound "ambience/wind" 100 "air" -1 -1
+mapsound "ambience/water" 100 "air" -1 -1
 
