--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -10,12 +10,13 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
+// cloudalpha 1.0
 // cloudblend 0.75
 // cloudbox ""
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
-// cloudheight 0.01
+// cloudheight 0.001
 // cloudlayer "acord/sky2cloud"
 // cloudscale 0.01
 // cloudscrollx 0.01
@@ -30,6 +31,12 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// grassstep 2.0
+// grasstaper 0.2
 // gravity 40.0
 // impulsegravity 62.5
 // impulsespeed 50.0
@@ -64,9 +71,9 @@
 // skylight 0xFF6644
 // skytexture 1
 // slopez 0.5
-// spincloudlayer 1.0
+// spincloudlayer 0.2
 // spinclouds 0.0
-// spinsky 0.0
+// spinsky 0.2
 // stairheight 4.1
 // stepspeed 1.0
 // vertwater 1
