--- a/data/sounds/ambience/package.cfg
+++ b/data/sounds/ambience/package.cfg
@@ -1,7 +1,36 @@
-mapsound "sfx/teleport" 250 "air"
-mapsound "sfx/jumppad" 250 "air"
-mapsound "ambience/wastewind" 25 "air"
-mapsound "ambience/hollowwind" 25 "air"
-mapsound "ambience/machine1" 75 "air"
-mapsound "ambience/water" 100 "air"
-mapsound "ambience/waterfall" 75 "air"
+mapsound "sfx/jumppad" 200 "air"
+mapsound "sfx/teleport" 200 "air"
+mapsound "ambience/alienwind" 200 "air"
+mapsound "ambience/blowwind" 200 "air"
+mapsound "ambience/cavedrip" 200 "air"
+mapsound "ambience/creek" 200 "air"
+mapsound "ambience/cycadas" 200 "air"
+mapsound "ambience/distant_cars" 200 "air"
+mapsound "ambience/dizzywind" 200 "air"
+mapsound "ambience/electro" 200 "air"
+mapsound "ambience/firelight" 200 "air"
+mapsound "ambience/forest1" 200 "air"
+mapsound "ambience/forest2" 200 "air"
+mapsound "ambience/forest3" 200 "air"
+mapsound "ambience/forestflies" 200 "air"
+mapsound "ambience/frogs" 200 "air"
+mapsound "ambience/hollowwind" 200 "air"
+mapsound "ambience/hum" 200 "air"
+mapsound "ambience/lava1" 200 "air"
+mapsound "ambience/lava2" 200 "air"
+mapsound "ambience/lavarumble1" 200 "air"
+mapsound "ambience/lavarumble2" 200 "air"
+mapsound "ambience/machine1" 200 "air"
+mapsound "ambience/machine2" 200 "air"
+mapsound "ambience/nightcrickets" 200 "air"
+mapsound "ambience/river" 200 "air"
+mapsound "ambience/wastewind" 200 "air"
+mapsound "ambience/water" 200 "air"
+mapsound "ambience/waterfall" 200 "air"
+mapsound "ambience/waterfall2" 200 "air"
+mapsound "ambience/waterfall3" 200 "air"
+mapsound "ambience/waterfall_deep" 200 "air"
+mapsound "ambience/waterfall_huge" 200 "air"
+mapsound "ambience/waterfall_indoor" 200 "air"
+mapsound "ambience/waterfall_medium" 200 "air"
+mapsound "ambience/wind" 200 "air"
