--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -10,6 +10,7 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
+// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox ""
 // cloudclip 0.5
@@ -30,6 +31,12 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// grassstep 2.0
+// grasstaper 0.2
 // gravity 40.0
 // impulsegravity 100.0
 // impulsespeed 50.0
@@ -1522,4 +1529,5 @@ mapsound "ambience/hollowwind" 25 "air" -1 -1
 mapsound "ambience/machine1" 75 "air" -1 -1
 mapsound "ambience/water" 100 "air" -1 -1
 mapsound "ambience/waterfall" 75 "air" -1 -1
+mapsound "ambience/lavarumble2" 100 "air" -1 -1
 
