--- a/data/maps/rivals.cfg
+++ b/data/maps/rivals.cfg
@@ -10,12 +10,13 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudblend 1.0
-// cloudbox ""
-// cloudclip 0.5
+// cloudalpha 1.0
+// cloudblend 0.25
+// cloudbox "acord/clouds"
+// cloudclip 0.0
 // cloudcolour 0xFFFFFF
-// cloudfade 0.2
-// cloudheight 0.2
+// cloudfade 1.0
+// cloudheight 0.0
 // cloudlayer ""
 // cloudscale 1.0
 // cloudscrollx 0.0
@@ -30,6 +31,12 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// grassstep 2.0
+// grasstaper 0.2
 // gravity 40.0
 // impulsegravity 62.5
 // impulsespeed 50.0
@@ -60,12 +67,12 @@
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 3.0
-// skybox "skyboxes/black"
+// skybox "<mad:0.25/0.25/0.25>skyboxes/stars"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
 // spincloudlayer 0.0
-// spinclouds 0.0
+// spinclouds 0.5
 // spinsky 0.0
 // stairheight 4.1
 // stepspeed 1.0
@@ -306,4 +313,7 @@ mapsound "ambience/hollowwind" 25 "air" -1 -1
 mapsound "ambience/machine1" 75 "air" -1 -1
 mapsound "ambience/water" 100 "air" -1 -1
 mapsound "ambience/waterfall" 75 "air" -1 -1
+mapsound "ambience/wind" 100 "air" -1 -1
+mapsound "ambience/lavarumble2" 100 "air" -1 -1
+mapsound "ambience/hum" 100 "air" -1 -1
 
