restored pistol model
Former-commit-id: 45a3adee1f5045cc7d480b1530408c0bf2b2fd32

--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -22,7 +22,7 @@ registersound	"sfx/shotgun"				224	"air"	256		//	S_SG
 registersound	"sfx/submachine"			128	"air"	256		//	S_SMG
 registersound	"sfx/grenadefire"			196	"air"	128		//	S_GLFIRE
 registersound	"sfx/flamer"				224	"air"	224		//	S_FLFIRE
-registersound	"sfx/carbine"				128	"air"	256		//	S_CARBINE
+registersound	"sfx/pistol"				128	"air"	256		//	S_PISTOL
 registersound	"sfx/rifle"					254	"air"	512		//	S_RIFLE
 registersound	"sfx/paintgun"				64	"air"	256		//	S_PAINT
 registersound	"sfx/itempickup"			128	"air" 	128		//	S_ITEMPICKUP
