--- a/data/models/actors/player/delta/md5.cfg
+++ b/data/models/actors/player/delta/md5.cfg
@@ -16,8 +16,9 @@ md5anim "plasma"                       "../idle.md5anim"           1
 md5anim "shotgun"                      "../idle.md5anim"           1
 md5anim "submachine"                   "../idle.md5anim"           1
 md5anim "flamer"                       "../idle.md5anim"           1
-md5anim "carbine"                      "../idle.md5anim"           1
+md5anim "pistol"                       "../idle.md5anim"           1
 md5anim "rifle"                        "../idle.md5anim"           1
+md5anim "paintgun"                     "../idle.md5anim"           1
 md5anim "grenades"                     "../idle.md5anim"           1
 md5anim "forward"                      "../forward.md5anim"        8
 md5anim "backward"                     "../backward.md5anim"       8
@@ -54,12 +55,15 @@ md5anim "submachine reload"            "../g_reload.md5anim"       8
 md5anim "flamer"                       "../g_idle.md5anim"         1
 md5anim "flamer shoot"                 "../g_shoot.md5anim"        25
 md5anim "flamer reload"                "../g_reload.md5anim"       8
-md5anim "carbine"                      "../g_idle.md5anim"         1
-md5anim "carbine shoot"                "../g_shoot.md5anim"        25
-md5anim "carbine reload"               "../g_reload.md5anim"       8
+md5anim "pistol"                       "../g_idle.md5anim"         1
+md5anim "pistol shoot"                 "../g_shoot.md5anim"        25
+md5anim "pistol reload"                "../g_reload.md5anim"       8
 md5anim "rifle"                        "../g_idle.md5anim"         1
 md5anim "rifle shoot"                  "../g_shoot.md5anim"        25
 md5anim "rifle reload"                 "../g_reload.md5anim"       8
+md5anim "paintgun"                     "../g_idle.md5anim"         1
+md5anim "paintgun shoot"               "../g_shoot.md5anim"        25
+md5anim "paintgun reload"              "../g_reload.md5anim"       8
 md5anim "grenades"                     "../frag_idle.md5anim"      1
 md5anim "grenades throw"               "../frag_throw.md5anim"     35
 md5anim "grenades reload"              "../g_reload.md5anim"       6
