--- a/data/models/actors/player/vwep/md5.cfg
+++ b/data/models/actors/player/vwep/md5.cfg
@@ -22,12 +22,15 @@ md5anim "submachine reload"            "../vwep_p_reload.md5anim"       20
 md5anim "flamer"                       "../vwep_sg_idle.md5anim"        1
 md5anim "flamer shoot"                 "../vwep_sg_shoot.md5anim"       30
 md5anim "flamer reload"                "../vwep_fl_reload.md5anim"      15.5
-md5anim "carbine"                      "../vwep_p_idle.md5anim"         1
-md5anim "carbine shoot"                "../vwep_p_shoot.md5anim"        50
-md5anim "carbine reload"               "../vwep_p_reload.md5anim"       22
+md5anim "pistol"                       "../vwep_p_idle.md5anim"         1
+md5anim "pistol shoot"                 "../vwep_p_shoot.md5anim"        50
+md5anim "pistol reload"                "../vwep_p_reload.md5anim"       22
 md5anim "rifle"                        "../vwep_sg_idle.md5anim"        1
 md5anim "rifle shoot"                  "../vwep_sg_shoot.md5anim"       20
 md5anim "rifle reload"                 "../vwep_sg_reload.md5anim"      16.8
+md5anim "paintgun"                     "../vwep_p_idle.md5anim"         1
+md5anim "paintgun shoot"               "../vwep_p_shoot.md5anim"        50
+md5anim "paintgun reload"              "../vwep_p_reload.md5anim"       22
 md5anim "grenades"                     "../vwep_gr_idle.md5anim"        1
 md5anim "grenades throw"               "../vwep_gr_throw.md5anim"       35
 md5anim "grenades reload"              "../vwep_gr_reload.md5anim"      9.34
